add: usr / adm auth, user and admin handlers
