# internal/delivery/handlers/user_rate.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"crypto-temka/internal/delivery/middleware"
 	"crypto-temka/internal/models"
 	"crypto-temka/internal/service"
 	"github.com/gin-gonic/gin"
@@ -19,6 +20,7 @@ func InitUserRateHandler(serv service.UserRate) UserRateHandler {
 // @Tags rate
 // @Accept  json
 // @Produce  json
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
 // @Param data body models.UserRateCreate true "data"
 // @Success 200 {object} int "Successfully created"
 // @Failure 400 {object} map[string]string "Invalid input"
@@ -33,6 +35,14 @@ func (s *UserRateHandler) CreateUserRate(c *gin.Context) {
 		return
 	}
 
+	userID, ok := c.Get(middleware.CUserID)
+	if !ok {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "CUserID was not found in create user rate handler"})
+		return
+	}
+
+	urc.UserID = userID.(int)
+
 	id, err := s.service.Create(ctx, urc)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
@@ -46,9 +56,9 @@ func (s *UserRateHandler) CreateUserRate(c *gin.Context) {
 // @Tags rate
 // @Accept  json
 // @Produce  json
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
 // @Param page query int true "Page"
 // @Param per_page query int false "Per page"
-// @Param user_id query int true "User id"
 // @Success 200 {object} []models.UserRate "Array"
 // @Failure 400 {object} map[string]string "Invalid input"
 // @Failure 500 {object} map[string]string "Internal server error"
@@ -59,7 +69,6 @@ func (s *UserRateHandler) GetUserRates(c *gin.Context) {
 	var filter struct {
 		Page    int `form:"page"`
 		PerPage int `form:"per_page"`
-		UserID  int `form:"user_id"`
 	}
 
 	err := c.BindQuery(&filter)
@@ -68,7 +77,13 @@ func (s *UserRateHandler) GetUserRates(c *gin.Context) {
 		return
 	}
 
-	rates, err := s.service.GetByUser(ctx, filter.UserID, filter.Page, filter.PerPage)
+	userID, ok := c.Get(middleware.CUserID)
+	if !ok {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "CUserID was not found in get user rates handler"})
+		return
+	}
+
+	rates, err := s.service.GetByUser(ctx, userID.(int), filter.Page, filter.PerPage)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -82,6 +97,7 @@ func (s *UserRateHandler) GetUserRates(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param id query int true "id"
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
 // @Success 200 {object} models.UserRate "User Rate"
 // @Failure 400 {object} map[string]string "Invalid input"
 // @Failure 500 {object} map[string]string "Internal server error"
@@ -99,7 +115,13 @@ func (s *UserRateHandler) GetUserRate(c *gin.Context) {
 		return
 	}
 
-	rate, err := s.service.Get(ctx, filter.ID)
+	userID, ok := c.Get(middleware.CUserID)
+	if !ok {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "CUserID was not found in get user rate handler"})
+		return
+	}
+
+	rate, err := s.service.Get(ctx, filter.ID, userID.(int))
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -112,6 +134,7 @@ func (s *UserRateHandler) GetUserRate(c *gin.Context) {
 // @Tags rate
 // @Accept  json
 // @Produce  json
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
 // @Param amount query int true "amount"
 // @Param user_rate_id query int true "userRateID"
 // @Success 200 {object} nil ""
@@ -132,7 +155,13 @@ func (s *UserRateHandler) Claim(c *gin.Context) {
 		return
 	}
 
-	err = s.service.Claim(ctx, filter.UserRateID, filter.Amount)
+	userID, ok := c.Get(middleware.CUserID)
+	if !ok {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "CUserID was not found in get user rate handler"})
+		return
+	}
+
+	err = s.service.Claim(ctx, filter.UserRateID, filter.Amount, userID.(int))
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -140,36 +169,3 @@ func (s *UserRateHandler) Claim(c *gin.Context) {
 
 	c.Status(http.StatusOK)
 }
-
-//// ClaimDeposit @Summary Claim from deposit
-//// @Tags rate
-//// @Accept  json
-//// @Produce  json
-//// @Param amount query int true "amount"
-//// @Param user_rate_id query int true "userRateID"
-//// @Success 200 {object} nil ""
-//// @Failure 400 {object} map[string]string "Invalid input"
-//// @Failure 500 {object} map[string]string "Internal server error"
-//// @Router /rate/claim/deposit [put]
-//func (s *UserRateHandler) ClaimDeposit(c *gin.Context) {
-//	ctx := c.Request.Context()
-//
-//	var filter struct {
-//		UserRateID int `form:"user_rate_id"`
-//		Amount     int `form:"amount"`
-//	}
-//
-//	err := c.BindQuery(&filter)
-//	if err != nil {
-//		c.JSON(http.StatusBadRequest, gin.H{"bad query: ": err.Error()})
-//		return
-//	}
-//
-//	err = s.service.ClaimDeposit(ctx, filter.UserRateID, filter.Amount)
-//	if err != nil {
-//		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-//		return
-//	}
-//
-//	c.Status(http.StatusOK)
-//}
