# internal/delivery/routers/user/user_rate.go
@@ -1,7 +1,8 @@
-package routers
+package user
 
 import (
 	"crypto-temka/internal/delivery/handlers"
+	"crypto-temka/internal/delivery/middleware"
 	"crypto-temka/internal/repository"
 	"crypto-temka/internal/service"
 	"crypto-temka/pkg/log"
@@ -9,8 +10,10 @@ import (
 	"github.com/jmoiron/sqlx"
 )
 
-func RegisterUserRateRouter(r *gin.Engine, db *sqlx.DB, logger *log.Logs) *gin.RouterGroup {
+func RegisterUserRateRouter(r *gin.Engine, db *sqlx.DB, logger *log.Logs, mdw middleware.Middleware) *gin.RouterGroup {
 	router := r.Group("/rate")
+
+	router.Use(mdw.Authorization(false))
 
 	userRateRepo := repository.InitUsersRate(db)
 	walletRepo := repository.InitWallet(db)
@@ -23,8 +26,8 @@ func RegisterUserRateRouter(r *gin.Engine, db *sqlx.DB, logger *log.Logs) *gin.R
 	router.POST("", handler.CreateUserRate)
 	router.GET("/user", handler.GetUserRates)
 	router.GET("", handler.GetUserRate)
-	router.PUT("/claim/outcome", handler.ClaimOutcome)
-	router.PUT("/claim/deposit", handler.ClaimDeposit)
+	router.PUT("/claim", handler.Claim)
+	//router.PUT("/claim/deposit", handler.ClaimDeposit)
 
 	return router
 }
